# axon

./: .gitignore  CMakeLists.txt  README.md  main.cpp
demos/GPT2/: export_gpt2.py  validate.py
examples/: 10_Save_Load_Model_Test.cpp  11_GPT2_ForwardPass.cpp  1_Basic_Ops.cpp  2_Test_Broadcasting.cpp  3_PreGrad_Checks.cpp  4_LinearRegression.cpp  5_SimpleXOR.cpp  6_ShapeTest.cpp  7_Batch_Matmul_Test.cpp  8_Test_Custom_Layers.cpp  9_SingleAttentionHead.cpp  ex_1.cpp
include/: Activations.hpp  Linear.hpp  LossFunctions.hpp  Sequential.hpp  Tensor.hpp  TensorMath.hpp  axon.hpp  ops.hpp
include/axon/: NN.hpp  Optimizer.hpp  ShapeUtils.hpp  Tensor.hpp  allocator.hpp  autograd.hpp  device.hpp  grad_mode.hpp  kernels.hpp  ops.hpp  optimizer.hpp  storage.hpp  tensor.hpp
include/axon/core/: arena.hpp  core.hpp  device.hpp  storage.hpp  storage_body.hpp
include/axon3/: autograd.hpp  nn.hpp
include/private/: OperationHelpers.hpp
src/: NN.cpp  Optimizer.cpp  Tensor.cpp  TensorMath.cpp  autograd.cpp  axon.cpp  cpu_kernels.cpp  cuda_kernels.cu  gpu_kernels.cu  kernels.cpp  main.cpp  ops.cpp  serialization.cpp  tensor.cpp  tensor_core.cpp  tensor_ops.cpp  tensor_utils.cpp
src/core/: storage.cpp  tensor_core.cpp  tensor_ops.cpp  tensor_utils.cpp
src/math/: binary_ops.cpp  comparisons.cpp  unary_ops.cpp
src/nn/: activations.cpp  linear.cpp  loss.cpp  sequential.cpp
src/nn/autograd/: backward.cpp
tests/: 5_Backward_Test_1.cpp  6_MatrixMultiplication_Test.cpp  CMakeLists.txt
tests/GPT2/: main.cpp
tests/MNIST_OCR/: main.cpp  mnist.hpp
tests/core/: storage_test.cpp
utils/: random_.hpp
